--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -275,6 +275,14 @@
 		width: calc(33% - 16px);
 	}
 
+	.noticia-expandir {
+		transition: transform .2s;
+	}
+
+		.noticia-expandir:hover {
+			transform: scale(1.01);
+		}
+
 	.noticia-enlaces {
 		flex-direction: row;
 		gap: 80px;
