--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -22,7 +22,7 @@
     if (suscripcionesActuales.Count > 0)
     {
         <h1 style="font-size: 23px;">
-            @Herramientas.Idiomas.CogerCadena(idioma, "Subscriptions.String1")
+            @Herramientas.Idiomas.CogerCadena(idioma, "Title", "Subscriptions")
         </h1>
 
         <div>
